--- a/Domasni/DimkoPlata/DimkoPlata.csproj
+++ b/Domasni/DimkoPlata/DimkoPlata.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{71882E0B-E95E-46EF-BECD-F3F22F0AB042}</ProjectGuid>
+    <ProjectGuid>{B8D5D61E-4988-4818-8351-47643664EF03}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Exercise4._1</RootNamespace>
-    <AssemblyName>Exercise4.1</AssemblyName>
+    <RootNamespace>DimkoPlata</RootNamespace>
+    <AssemblyName>DimkoPlata</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Users.cs" />
+    <Compile Include="Classes\Vraboteni.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
